<resources>

    <string name="app_name">手机报</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_add">地   址</string>
    <string name="sign_addname">地址名称  </string>
    <string name="acc_label_pwd">当前地址  </string>
    <string name="acc_hint_signin">(必填)</string>
    <string name="sign_title">创建地点</string>
    <string name="poi_hint_search">搜索地点:如肯德基、星巴克</string>
    <string name="nearby_title">附近</string>
    <string name="user_label_friend">好友</string>
    <string name="user_label_favr">收藏</string>
    <string name="nearby_label_all">全部地点</string>
    <string name="nearby_label_zhongcan">中餐</string>
    <string name="nearby_label_xican">西餐</string>
    <string name="nearby_label_lengyin">冷饮甜品</string>
    <string name="nearby_label_ktv">KTV</string>
     <string name="nearby_label_wn_name">请填写地点名称</string>
      <string name="nearby_label_wn_address">请填写地址</string>
        <string name="sign_sucess">创建成功！</string>
    
    
    

    <!-- 个人设置 -->

    <string name="user_label_title">编辑个人资料</string>
    <string name="user_label_basic">基本资料</string>
    <string name="user_label_avatar">头像</string>
    <string name="user_label_nickname">昵称</string>
    <string name="user_label_description">签名</string>
    <!-- 修改头像 -->
    <string name="user_avatar_title">上传头像</string>
    <string name="common_btn_confirm">确定</string>
    <string name="user_avatar_take">拍照上传</string>
    <string name="user_avatar_album">从相册上传</string>

    <!-- 状态条提示 -->
    <string name="page_status_refreshing">正在获取</string>
    <string name="page_status_updating">正在发送</string>
    <string name="page_status_deleting">正在删除</string>
    <string name="page_status_update_success">发送成功</string>
    <string name="page_status_unable_to_update">无法发送信息</string>
    <string name="page_status_timeout">网络超时</string>
     <string name="page_status_error">上传失败，请稍候在试</string>
     
     <!-- 网络 -->
     
       <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
     

</resources>