<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kids21="http://schemas.android.com/apk/res/com.kids21.app.newspaper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/common_bg_white"
    android:orientation="vertical" >

    <com.kids21.app.newpaper.widget.MyTitle
        android:id="@+id/c_myTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        kids21:left_icon="@drawable/common_icon_back" />

    <LinearLayout
        android:id="@id/basic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        
        android:paddingTop="10.0dip" >

        <TextView
            style="@style/setting_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="18.0dip"
            android:text="@string/user_label_basic" />
       
          
  <View
        android:layout_width="wrap_content"
        android:layout_height="1.0px"
        android:background="@color/item_sep" />
        <com.kids21.app.newpaper.widget.ItemView
            android:id="@+id/user_avatar"
             style="@style/common_input_t"
            android:layout_width="fill_parent"
        	 android:clickable="true"
            android:layout_height="wrap_content"
            kids21:item_title="@string/user_label_avatar"
            kids21:position="top" />
        
              <View
        android:layout_width="wrap_content"
        android:layout_height="1.0px"
        android:background="@color/item_sep" />

        <com.kids21.app.newpaper.widget.ItemView
            android:id="@id/nickname"
             style="@style/common_input_m"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            kids21:item_title="@string/user_label_nickname"
            kids21:position="middle" />
        
              <View
        android:layout_width="wrap_content"
        android:layout_height="1.0px"
        android:background="@color/item_sep" />

        <com.kids21.app.newpaper.widget.ItemView
            android:id="@id/description"
                style="@style/common_input_m"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            kids21:item_title="@string/user_label_description"
            kids21:position="bottom" />
    </LinearLayout>

</LinearLayout>